--- a/octopus/templates/things/detail.html
+++ b/octopus/templates/things/detail.html
@@ -4,7 +4,7 @@
   <h1>Thing</h1>
   <p>{{ thing.text }}</P>
   <a class="btn btn-outline-primary" href="{% url 'things:edit' thing.pk %}" role="button">Edit</a>
-  <a class="btn btn-outline-danger" href="#" role="button">Delete</a>
+  <a class="btn btn-outline-danger" href="{% url 'things:delete' thing.pk %}" role="button">Delete</a>
 
 
 {% endblock content %}
