--- a/octopus/templates/things/edit.html
+++ b/octopus/templates/things/edit.html
@@ -3,9 +3,9 @@
 {% block content %}
   <h1>Edit thing</h1>
   <form action="" method="post">{% csrf_token %}
-
+    <div class="form-group">
       {{ form.as_p }}
-      <input type="submit" value="Save" />
-
+      <input type="submit" value="Save" class="btn btn-primary"/>
+    </div>
   </form>
 {% endblock content %}
