--- a/octopus/templates/things/edit.html
+++ b/octopus/templates/things/edit.html
@@ -3,9 +3,6 @@
 {% block content %}
   <h1>Edit thing</h1>
   <form action="" method="post">{% csrf_token %}
-    <div class="form-group">
-      {{ form.as_p }}
-      <input type="submit" value="Save" class="btn btn-primary"/>
-    </div>
+    {% include 'things/create-or-edit-form.html' %}
   </form>
 {% endblock content %}
