playing with mailgun and celery

--- a/octopus/templates/home/home.html
+++ b/octopus/templates/home/home.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
 
 {% block content %}
-  <h1>Octopus</h1>
+  <h1>Octopus home page for visitors.</h1>
 {% endblock content %}
