--- a/octopus/templates/things/new.html
+++ b/octopus/templates/things/new.html
@@ -3,6 +3,6 @@
 {% block content %}
   <h1>New thing</h1>
   <form action="" method="post">{% csrf_token %}
-    {% include 'things/create-or-edit-form.html' %}
+    {% include 'things/new-form.html' %}
   </form>
 {% endblock content %}
