--- a/octopus/templates/things/list.html
+++ b/octopus/templates/things/list.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
+
   <h1>Today</h1>
   {% for thing in today_things %}
     <div class="row">
@@ -8,7 +9,7 @@
         <p>{{ thing }}</p>
       </div>
       <div class="col-2">
-        <p><a href="{% url 'things:edit' thing.pk %}" class="btn btn-outline-primary octopus-circle" role="button">?</a></p>
+        <p><a href="{% url 'things:edit' thing.pk %}" class="btn btn-outline-primary octopus-circle" role="button">O</a></p>
       </div>
     </div>
     <hr>
@@ -22,7 +23,7 @@
         <p>{{ thing }}</p>
       </div>
       <div class="col-2">
-        <p><a href="{% url 'things:edit' thing.pk %}" class="btn btn-outline-primary octopus-circle" role="button">?</a></p>
+        <p><a href="{% url 'things:edit' thing.pk %}" class="btn btn-outline-primary octopus-circle" role="button">O</a></p>
       </div>
     </div>
     <hr>
