--- a/octopus/templates/things/list.html
+++ b/octopus/templates/things/list.html
@@ -9,7 +9,7 @@
         <p>{{ thing }}</p>
       </div>
       <div class="col-2">
-        <p><a href="{% url 'things:edit' thing.pk %}" class="btn btn-outline-primary octopus-circle" role="button">O</a></p>
+        <p><a href="{% url 'things:edit' thing.pk %}"><i class="fa fa-info-circle fa-2x" aria-hidden="true"></i></a></p>
       </div>
     </div>
     <hr>
@@ -23,7 +23,7 @@
         <p>{{ thing }}</p>
       </div>
       <div class="col-2">
-        <p><a href="{% url 'things:edit' thing.pk %}" class="btn btn-outline-primary octopus-circle" role="button">O</a></p>
+        <p><a href="{% url 'things:edit' thing.pk %}"><i class="fa fa-info-circle fa-2x" aria-hidden="true"></i></a></p>
       </div>
     </div>
     <hr>
