changed email task and crontab

--- a/octopus/templates/things/new-form.html
+++ b/octopus/templates/things/new-form.html
@@ -1,4 +1,7 @@
 <div class="form-group">
-  {{ form.as_p }}
-  <input type="submit" value="Save" class="btn btn-outline-primary btn-lg"/>
+  {{ form.text }}
 </div>
+<div class="form-check">
+  {{ form.today }}
+</div>
+<button type="submit" value="Save" class="btn btn-outline-primary btn-lg">Save</button>
