--- a/octopus/templates/things/new.html
+++ b/octopus/templates/things/new.html
@@ -1,9 +1,11 @@
 {% extends "base.html" %}
 
 {% block content %}
+<div class="container">
   <h1>New thing</h1>
   <form action="" method="post">{% csrf_token %}
     {% include 'things/new-form.html' %}
   </form>
-  
+</div>
+
 {% endblock content %}
