--- a/octopus/templates/things/email.html
+++ b/octopus/templates/things/email.html
@@ -1,4 +1,9 @@
 <h1>Remember about</h1>
-{% for thing in things %}
-  <p>the -- {{ thing }}
+<h2>Today</h2>
+{% for thing in today_things %}
+  <p>{{ thing }}</p>
+{% endfor %}
+<h2>Later</h2>
+{% for thing in later_things %}
+  <p>{{ thing }}</p>
 {% endfor %}
