added few words on home page and new page link on menu

--- a/octopus/templates/home/home.html
+++ b/octopus/templates/home/home.html
@@ -1,6 +1,10 @@
 {% extends "base.html" %}
 
 {% block content %}
-  <h1>Octopus home page for visitors.</h1>
-  
+  <h1>Octopus Reminder</h1>
+
+  <h1 class="display-2">The app has the only one purpose.<br>To help You not to forget about things.</h1>
+  <br>
+  <p>The app reminds you about things you planned to do. It helps to write them down fast and easy and it sends you an email with list of things three times a day. Why email? The email app is the only one I check constantly every day. I used different apps to not forget about things but I didn't lunch them regularly after a first week. The pop up reminders also dont work for me. I ignore them because theres to much of them even I set them up. The email app is the only one I check very often so I deceided to build something around that. The calendar sends reminders to email but there's too much of them, most about job. I though it'd be great to have the list of things on email few times a day. Nothing more. Just that. I didn't find such simple and easy app so I built one. I like it.</p>
+
 {% endblock content %}
