--- a/octopus/templates/base.html
+++ b/octopus/templates/base.html
@@ -50,6 +50,9 @@
               <a class="nav-link" href="{% url 'things:list' %}">List</a>
             </li>
             {% if request.user.is_authenticated %}
+            <li class="nav-item">
+              <a class="nav-link" href="{% url 'things:new' %}">New</a>
+            </li>
               <li class="nav-item">
                 {# URL provided by django-allauth/account/urls.py #}
                 <a class="nav-link" href="{% url 'users:detail' request.user.username  %}">{% trans "My Profile" %}</a>
