--- a/octopus/templates/things/email.html
+++ b/octopus/templates/things/email.html
@@ -1,9 +1,9 @@
 <h1>Remember about</h1>
 <h2>Today</h2>
 {% for thing in today_things %}
-  <p>{{ thing }}</p>
+  <p>{{ thing }} <a href="https://octopusreminder.com{% url 'things:detail' thing.pk %}">Click</a></p>
 {% endfor %}
 <h2>Later</h2>
 {% for thing in later_things %}
-  <p>{{ thing }}</p>
+  <p>{{ thing }} <a href="https://octopusreminder.com{% url 'things:detail' thing.pk %}">Click</a></p>
 {% endfor %}
