added templates, contact, how to in menu, changed task to send email to all auth users.

--- a/octopus/templates/base.html
+++ b/octopus/templates/base.html
@@ -44,15 +44,20 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-              <a class="nav-link" href="{% url 'home' %}">Home <span class="sr-only">(current)</span></a>
+              <a class="nav-link" href="{% url 'about' %}">About</a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link" href="{% url 'things:list' %}">List</a>
+            <li class="nav-item active">
+              <a class="nav-link" href="{% url 'howto' %}">How to</a>
             </li>
+
+
             {% if request.user.is_authenticated %}
-            <li class="nav-item">
-              <a class="nav-link" href="{% url 'things:new' %}">New</a>
-            </li>
+              <li class="nav-item">
+                <a class="nav-link" href="{% url 'things:new' %}">New</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="{% url 'things:list' %}">List</a>
+              </li>
               <li class="nav-item">
                 {# URL provided by django-allauth/account/urls.py #}
                 <a class="nav-link" href="{% url 'users:detail' request.user.username  %}">{% trans "My Profile" %}</a>
@@ -71,6 +76,9 @@
                 <a id="log-in-link" class="nav-link" href="{% url 'account_login' %}">{% trans "Sign In" %}</a>
               </li>
             {% endif %}
+            <li class="nav-item active">
+              <a class="nav-link" href="{% url 'contact' %}">Contact</a>
+            </li>
           </ul>
         </div>
       </nav>
