--- a/octopus/templates/base.html
+++ b/octopus/templates/base.html
@@ -35,7 +35,7 @@
 
     <div class="m-b-1">
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="{% url 'home' %}">Octopus</a>
+        <a class="navbar-brand" href="{% url 'home' %}">Octopus Reminder</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -43,12 +43,7 @@
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto">
-            <li class="nav-item active">
-              <a class="nav-link" href="{% url 'about' %}">About</a>
-            </li>
-            <li class="nav-item active">
-              <a class="nav-link" href="{% url 'howto' %}">How to</a>
-            </li>
+
 
 
             {% if request.user.is_authenticated %}
@@ -76,6 +71,12 @@
                 <a id="log-in-link" class="nav-link" href="{% url 'account_login' %}">{% trans "Sign In" %}</a>
               </li>
             {% endif %}
+            <li class="nav-item active">
+              <a class="nav-link" href="{% url 'about' %}">About</a>
+            </li>
+            <li class="nav-item active">
+              <a class="nav-link" href="{% url 'howto' %}">How to</a>
+            </li>
             <li class="nav-item active">
               <a class="nav-link" href="{% url 'contact' %}">Contact</a>
             </li>
