--- a/octopus/templates/things/new-form.html
+++ b/octopus/templates/things/new-form.html
@@ -1,11 +1,8 @@
 <div class="form-group">
-  {{ form.text }}
+  {{ form.as_p }}
 
 </div>
 
-<div class="form-check">
-  {{ form.today }}
-</div>
 
 
 <button type="submit" value="Save" class="btn btn-outline-primary btn-lg">Save</button>
