--- a/octopus/templates/base.html
+++ b/octopus/templates/base.html
@@ -75,6 +75,9 @@
               <a class="nav-link" href="{% url 'about' %}">About</a>
             </li>
             <li class="nav-item active">
+              <a class="nav-link" href="{% url 'blog' %}">Blog</a>
+            </li>
+            <li class="nav-item active">
               <a class="nav-link" href="{% url 'howto' %}">How to</a>
             </li>
             <li class="nav-item active">
