adding tutorials hot to use the app

--- a/octopus/static/css/octopus.css
+++ b/octopus/static/css/octopus.css
@@ -12,3 +12,12 @@ p {
 .octopus-circle {
   border-radius: 50%;
 }
+
+.green {
+  background-color: green;
+  
+}
+
+.gray {
+  background-color: gray;
+}
