--- a/octopus/templates/pages/howto.html
+++ b/octopus/templates/pages/howto.html
@@ -8,7 +8,7 @@
   <h3>How the app works.</h3>
   <h3>How to sign up.</h3>
   <h3>How to sign in.</h3>
-  <h3>How to add the app to the home screen of your smartphone.</h3>
+  <h3>How to add the app to the home screen of your smartphone.<a href="{% url 'howto:install' %}">check</a></h3>
   <h3>How to use the app.</h3>
   <h3>How to contact with us.</h3>
   <h3>How to pay.</h3>
