--- a/octopus/templates/howto/install.html
+++ b/octopus/templates/howto/install.html
@@ -6,59 +6,67 @@
   <h1>How to add web app to the Home screen of your iPhone.</h1>
 
   <div class="row">
-    <div class="col-8">
+    <div class="col-md-8 col-sm-12">
       <img src="/static/images/install1.png" class="img-fluid" alt="screen1">
     </div>
-    <div class="col-4">
+    <div class="col-md-4 col-sm-12">
       <p>Tap Safari icon.</p>
     </div>
   </div>
+  <hr>
   <div class="row">
-    <div class="col-8">
+    <div class="col-md-8 col-sm-12">
       <img src="/static/images/install2.png" class="img-fluid" alt="screen2">
     </div>
-    <div class="col-4">
+    <div class="col-md-4 col-sm-12">
       <p>Write octopusreminder.com in the search bar and click Go button.</p>
     </div>
   </div>
+  <hr>
   <div class="row">
-    <div class="col-8">
+    <div class="col-md-8 col-sm-12">
       <img src="/static/images/install3.png" class="img-fluid" alt="screen3">
     </div>
-    <div class="col-4">
+    <div class="col-md-4 col-sm-12">
       <p>Tap the share icon.</p>
     </div>
   </div>
+  <hr>
   <div class="row">
-    <div class="col-8">
+    <div class="col-md-8 col-sm-12">
       <img src="/static/images/install4.png" class="img-fluid" alt="screen4">
     </div>
-    <div class="col-4">
+    <div class="col-md-4 col-sm-12">
       <p>Tap the Add to Home Screen icon.</p>
     </div>
   </div>
-  <div class="row">
-    <div class="col-8">
-      <img src="/static/images/install5.png" class="img-fluid" alt="screen5">
-    </div>
-    <div class="col-4">
-      <p>Here you can change the name to be displayed below the icon, leave it unchanged or delete the name to have just icon without any name below it. Then you should click Add button. </p>
+  <hr>
+  <div class="container">
+    <div class="row">
+      <div class="col-md-8 col-sm-12">
+        <img src="/static/images/install5.png" class="img-fluid" alt="screen5">
+      </div>
+      <div class="col-md-4 col-sm-12">
+        <p>Here you can change the name to be displayed below the icon, leave it unchanged or delete the name to have just icon without any name below it. Then you should click Add button. </p>
+      </div>
     </div>
   </div>
+  <hr>
   <div class="row">
-    <div class="col-8">
+    <div class="col-md-8 col-sm-12">
       <img src="/static/images/install6.png" class="img-fluid" alt="screen6">
     </div>
-    <div class="col-4">
+    <div class="col-md-4 col-sm-12">
       <p>The icon should apear on the screen of your iPhone.</p>
     </div>
   </div>
+  <hr>
   <div class="row">
-    <div class="col-8">
+    <div class="col-md-8 col-sm-12">
       <img src="/static/images/install7.png" class="img-fluid" alt="screen7">
     </div>
-    <div class="col-4">
-      <p>You can move the icon between screen. Just tap and hold the icon for few second. It should start shaking. Then you can move it. Tap the Home Button to set it up.</p>
+    <div class="col-md-4 col-sm-12">
+      <p>You can move the icon between screens. Just tap and hold the icon for few seconds. It should start shaking. Then you can move it. Tap the Home Button to set it up.</p>
     </div>
   </div>
 {% endblock content %}
