--- a/octopus/templates/things/edit.html
+++ b/octopus/templates/things/edit.html
@@ -3,8 +3,9 @@
 {% block content %}
 
   <h1>Edit thing</h1>
-  <form action="" method="post">{% csrf_token %}
+  <form action="" method="post">
+    {% csrf_token %}
     {% include 'things/edit-form.html' %}
   </form>
-  
+
 {% endblock content %}
