--- a/octopus/templates/things/new.html
+++ b/octopus/templates/things/new.html
@@ -3,7 +3,8 @@
 {% block content %}
 <div class="container">
   <h1>New thing</h1>
-  <form action="" method="post">{% csrf_token %}
+  <form action="" method="post">
+    {% csrf_token %}
     {% include 'things/new-form.html' %}
   </form>
 </div>
