--- a/octopus/templates/things/thing_confirm_delete.html
+++ b/octopus/templates/things/thing_confirm_delete.html
@@ -3,7 +3,8 @@
 {% block content %}
 
   <h1>Delete thing</h1>
-  <form action="" method="post">{% csrf_token %}
+  <form action="" method="post">
+    {% csrf_token %}
     <p>Are you sure you want to delete "{{ thing }}"?</p>
     <input type="submit" value="Confirm" class="btn btn-danger"/>
   </form>
