added how to signup tut

--- a/octopus/templates/pages/howto.html
+++ b/octopus/templates/pages/howto.html
@@ -3,19 +3,19 @@
 {% block content %}
   <h1>Set of tutorials / videos:</h1>
   <hr>
-  <h2>How the app works.</h2>
+  <h3>How the app works.</h3>
   <br>
-  <h2>How to sign up.</h2>
+  <h3>How to sign up. <a href="{% url 'howto:signup' %}"> check</a></h3>
   <br>
-  <h2>How to sign in.</h2>
+  <h3>How to sign in.</h3>
   <br>
-  <h2>How to add the app to the home screen of your smartphone. <a href="{% url 'howto:install' %}"> check</a></h2>
+  <h3>How to add the app to the home screen of your smartphone. <a href="{% url 'howto:install' %}"> check</a></h3>
   <br>
-  <h2>How to use the app.</h2>
+  <h3>How to use the app.</h3>
   <br>
-  <h2>How to contact with us.</h2>
+  <h3>How to contact with us.</h3>
   <br>
-  <h2>How to pay.</h2>
+  <h3>How to pay.</h3>
   <br>
-  <h3>How to get money back.</3>
+  <h3>How to get money back.</h3>
 {% endblock content %}
