--- a/octopus/templates/pages/howto.html
+++ b/octopus/templates/pages/howto.html
@@ -1,21 +1,24 @@
 {% extends "base.html" %}
 
 {% block content %}
-  <h1>Set of tutorials / videos:</h1>
+  <h1>Set of tutorials and answers:</h1>
   <hr>
   <h3>How the app works.</h3>
   <br>
   <h3>How to sign up. <a href="{% url 'howto:signup' %}"> check</a></h3>
   <br>
-  <h3>How to sign in.</h3>
+  <h3>How to sign in. <a href="{% url 'howto:signin' %}"> check</a></h3>
   <br>
   <h3>How to add the app to the home screen of your smartphone. <a href="{% url 'howto:install' %}"> check</a></h3>
   <br>
-  <h3>How to use the app.</h3>
-  <br>
   <h3>How to contact with us.</h3>
+  <p>Just send an email to octopus@octopusreminder.com.
   <br>
-  <h3>How to pay.</h3>
+  <h3>How to pay. <a href="{% url 'howto:pay' %}"> check</a></h3>
+
+
   <br>
   <h3>How to get money back.</h3>
+
+  <p>
 {% endblock content %}
