changed a bit text home template

--- a/octopus/templates/pages/howto.html
+++ b/octopus/templates/pages/howto.html
@@ -3,7 +3,7 @@
 {% block content %}
   <h1>Set of tutorials and answers:</h1>
   <hr>
-  <h3>How the app works.</h3>
+  <h3>How use the app. <a href="{% url 'howto:use' %}"> check</a></h3>
   <br>
   <h3>How to sign up. <a href="{% url 'howto:signup' %}"> check</a></h3>
   <br>
