--- a/octopus/templates/home/home.html
+++ b/octopus/templates/home/home.html
@@ -1,8 +1,10 @@
 {% extends "base.html" %}
 
 {% block content %}
-  <h1 class="display-2">The app has the only one purpose.<br>To help You not to forget about things.</h1>
+  <h1 class="display-2">Wouldn’t it be great to not forget about things anymore?</h1>
   <br>
-  <p>The app reminds you about things you planned to do. It helps to write them down fast and easy and it sends you an email with list of things three times a day. Why email? The email app is the only one I check constantly every day. I used different apps to not forget about things but I didn't lunch them regularly after a first week. The pop up reminders also dont work for me. I ignore them because theres to much of them even I set them up. The email app is the only one I check very often so I deceided to build something around that. The calendar sends reminders to email but there's too much of them, most about job. I though it'd be great to have the list of things on email few times a day. Nothing more. Just that. I didn't find such simple and easy app so I built one. I like it.</p>
+  <p>Do you have it somethimes, like you come up with something important unexpectedly you need to remember about and you have no easy way to write it down? Like you’re in a car and some great idea comes up and you know the greens turns on in a moment but you need to write the thing now but not on steamy window. Or you’re in an elevetor and people talk about some great book, they say the author name but you know you won’t remeber it and you can’t scrap it on elevator walls? Or handsome barista with these blue eyes gives you your hot morning coffee, you smile him back and suddenly you see your kid on a dentist chair and you know it’s today!</p>
+</br>
+<p>The calendar app doesn’t help in these moments, right? Nothing help though you tried different apps? <a href="{% url 'howto:use' %}">Could you check if OctopusReminder can help?</a></p>
 
 {% endblock content %}
