--- a/octopus/templates/howto/pay.html
+++ b/octopus/templates/howto/pay.html
@@ -9,7 +9,7 @@
   <p>Why it won't be free? Three reasons:</p>
   <p>1. The app generate costs, at least 20 $ a month if number of users is small.</p>
   <p>2. Asking for payment is the best way to validate the app idea and I'm still/constantly learning how to do "startup" things.</p>
-  <p>3. I need money to live, to pay for internet connection, coffee, Barbie for my daughter, sons's swimming lessons... I need lot of money. I have to make them.</p>
+  <p>3. I need money to live, to pay for internet connection, coffee, Barbie for my daughter, swimming lessons for son, etc. I need lot of money. I have to make them.</p>
   <p>I promiss and guarantee easy 90 days money back. Just drop me an email you don't like the app anymore.</p>
 
 
