changed text in home and about template

--- a/octopus/templates/home/home.html
+++ b/octopus/templates/home/home.html
@@ -3,8 +3,8 @@
 {% block content %}
   <h1 class="display-2">Wouldn’t it be great to not forget about things anymore?</h1>
   <br>
-  <p>Do you have it somethimes, like you come up with something important unexpectedly you need to remember about and you have no easy way to write it down? Like you’re in a car and some great idea comes up and you know the greens turns on in a moment but you need to write the thing now but not on steamy window. Or you’re in an elevetor and people talk about some great book, they say the author name but you know you won’t remeber it and you can’t scrap it on elevator walls? Or handsome barista with these blue eyes gives you your hot morning coffee, you smile him back and suddenly you see your kid on a dentist chair and you know it’s today!</p>
+  <p>Do you ever find for instance, you come up with something important unexpectedly that you need to remember and you have no easy way to write it down? Like you’re in your car and some great idea comes to you but you know the light is about to turn green and you need to write your idea down right then and there, preferably not on a steamy window. Or you’re in an elevator and people are talking about some great book, they say the author’s name but you know you won’t remember it and you can’t just jot it down on the elevator wall? Maybe a handsome barista with these blue eyes smiles at you while he passes you your hot morning coffee, as you smile back at him you suddenly see your kid on the dentist chair and you know that it’s today!</p>
 </br>
-<p>The calendar app doesn’t help in these moments, right? Nothing help though you tried different apps? <a href="{% url 'howto:use' %}">Could you check if OctopusReminder can help?</a></p>
+<p>The calendar app doesn’t help in these moments, right? Nothing helps though you tried different apps? <a href="{% url 'about' %}">Maybe you could see if the OctopusReminder can help.</a></p>
 
 {% endblock content %}
