--- a/octopus/templates/pages/about.html
+++ b/octopus/templates/pages/about.html
@@ -1,5 +1,15 @@
 {% extends "base.html" %}
 
 {% block content %}
-  <h1>About page.</h1>
+  <p>The app helps to not forget about things. It does it in two steps:</p>
+
+  <p>1.</p>
+  <p>The app let you write notes fast, just after you start it. One click and it's ready. No settings here. There's no time to set up anything in this moment.</p>
+
+  <p>2.</p>
+  <p>The app sends you an email with list of things you want to remember about few times a day. Why email? Isn't it the one of two or three apps you use constantly all the time? Do you check your calendar few times a day regulary? Do you use any other app in this way? Do reminders fails? </p>
+
+
+
+
 {% endblock content %}
