polishing about template and added pay back info

--- a/octopus/templates/pages/about.html
+++ b/octopus/templates/pages/about.html
@@ -1,14 +1,16 @@
 {% extends "base.html" %}
 
 {% block content %}
-  <p>The app helps to not forget about things. It does it in two steps:</p>
+
+<div class="container">
+  <h1>The app helps to not forget about things. It does it in two steps:</h1>
 
   <p>1.</p>
   <p>The app let you write notes fast, just after you start it. One click and it's ready. No settings here. There's no time to set up anything in this moment.</p>
 
   <p>2.</p>
-  <p>The app sends you an email with list of things you want to remember about few times a day. Why email? Isn't it the one of two or three apps you use constantly all the time? Do you check your calendar few times a day regulary? Do you use any other app in this way? Do reminders fails? </p>
-
+  <p>Do you check your email regularly all the time? Imagine you have a friend who sends you an email every morning with list of things you don’t want to forget about. What a friend, right? OtopusReminder app sends you that kind of email few times a day: in the morning, while you’re at work and in the evening. You can change the schedule if you want.</p>
+</div>
 
 
 
