--- a/octopus/templates/pages/howto.html
+++ b/octopus/templates/pages/howto.html
@@ -15,10 +15,9 @@
   <p>Just send an email to octopus@octopusreminder.com.
   <br>
   <h3>How to pay. <a href="{% url 'howto:pay' %}"> check</a></h3>
-
-
   <br>
   <h3>How to get money back.</h3>
+  <p>Just drop me an email you don't like the app anymore.</p>
 
   <p>
 {% endblock content %}
