--- a/octopus/templates/pages/howto.html
+++ b/octopus/templates/pages/howto.html
@@ -3,21 +3,21 @@
 {% block content %}
   <h1>Set of tutorials and answers:</h1>
   <hr>
-  <h3>How use the app. <a href="{% url 'howto:use' %}"> check</a></h3>
+  <a href="{% url 'howto:use' %}"><h3>How use the app.</h3></a>
   <br>
-  <h3>How to sign up. <a href="{% url 'howto:signup' %}"> check</a></h3>
+  <a href="{% url 'howto:signup' %}"><h3>How to sign up.</h3></a>
   <br>
-  <h3>How to sign in. <a href="{% url 'howto:signin' %}"> check</a></h3>
+  <a href="{% url 'howto:signin' %}"><h3>How to sign in.</h3></a>
   <br>
-  <h3>How to add the app to the home screen of your smartphone. <a href="{% url 'howto:install' %}"> check</a></h3>
+  <a href="{% url 'howto:install' %}"><h3>How to add the app to the home screen of your smartphone.</h3></a>
   <br>
-  <h3>How to contact with us.</h3>
-  <p>Just send an email to octopus@octopusreminder.com.
+  <a href="{% url 'howto:price' %}"><h3>How much for this.</h3></a>
   <br>
-  <h3>How to pay. <a href="{% url 'howto:pay' %}"> check</a></h3>
+  <h3>How to contact with me.</h3>
+  <p>Just send an email to <a href="mailto:octopus@octopusreminder.com">octopus@octopusreminder.com</a> or you can take a look at <a href="www.rafalszymanski.com">rafalszymanski.com</a>
   <br>
   <h3>How to get money back.</h3>
-  <p>Just drop me an email you don't like the app anymore.</p>
+  <p>I promise and guarantee easy 60 days money back. Just drop me an email you don't like the app anymore.</p>
 
   <p>
 {% endblock content %}
