--- a/octopus/templates/pages/howto.html
+++ b/octopus/templates/pages/howto.html
@@ -14,7 +14,7 @@
   <a href="{% url 'howto:price' %}"><h3>How much for this.</h3></a>
   <br>
   <h3>How to contact with me.</h3>
-  <p>Just send an email to <a href="mailto:octopus@octopusreminder.com">octopus@octopusreminder.com</a> or you can take a look at <a href="www.rafalszymanski.com">rafalszymanski.com</a>
+  <p>Just send an email to <a href="mailto:octopus@octopusreminder.com">octopus@octopusreminder.com</a> or you can take a look at <a href="http://rafalszymanski.com">rafalszymanski.com</a>
   <br>
   <h3>How to get money back.</h3>
   <p>I promise and guarantee easy 60 days money back. Just drop me an email you don't like the app anymore.</p>
