--- a/octopus/templates/pages/about.html
+++ b/octopus/templates/pages/about.html
@@ -9,7 +9,7 @@
   <p>The app let you write notes fast, just after you start it. One click and it's ready. No settings here. There's no time to set up anything in this moment.</p>
 
   <p>2.</p>
-  <p>Do you check your email regularly all the time? Imagine you have a friend who sends you an email every morning with list of things you don’t want to forget about. What a friend, right? OtopusReminder app sends you that kind of email few times a day: in the morning, while you’re at work and in the evening. You can change the schedule if you want. <a href="{% url 'howto' %}">The set of tutorials and answers provide details how the app can serve you.</a></p>
+  <p>Do you check your email regularly all the time? Imagine you have a friend who sends you an email every morning with list of things you don’t want to forget about. What a friend, right? OtopusReminder app sends you that kind of email few times a day: in the morning, while you’re at work and in the evening. You can change the schedule if you want (this feature will be added soon). <a href="{% url 'howto' %}">The set of tutorials and answers provide details how the app can serve you.</a></p>
   <hr>
   <p>The OctopusReminder is a web app which means you don't have to download it or install at all. You don't have to upgrade it. It's always up to date. The only thing you need is an internet connection. The app works great on almost all devices and screens except smartwatches and tvs.</p>
 
