--- a/octopus/templates/base.html
+++ b/octopus/templates/base.html
@@ -44,7 +44,9 @@
     <div class="m-b-1">
 
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="{% url 'home' %}">Octopus Reminder</a>
+        <a class="navbar-brand" href="{% url 'home' %}">
+          <img src="{% static '/images/apple-touch-icon.png' %}" width="50" height="50" alt="octopus">
+        </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
