--- a/octopus/templates/base.html
+++ b/octopus/templates/base.html
@@ -46,7 +46,7 @@
     <div class="m-b-1">
 
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <p>Octopus</p>
+        <p>Octopus Reminder</p>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
