navbar with brand

--- a/octopus/templates/base.html
+++ b/octopus/templates/base.html
@@ -46,7 +46,10 @@
     <div class="m-b-1">
 
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <p>Octopus Reminder</p>
+        <a class="navbar-brand" href="{% url 'things:new' %}">
+          <img src="{% static '/images/octopus.png' %}" width="30" height="30" alt="Octopus">
+        </a>
+
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
