--- a/octopus/templates/base.html
+++ b/octopus/templates/base.html
@@ -47,7 +47,7 @@
 
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" href="{% url 'things:new' %}">
-          <img src="{% static '/images/octopus.png' %}" width="30" height="30" alt="Octopus">
+          <img src="{% static 'images/octopus.png' %}" width="30" height="30" alt="Octopus">
         </a>
 
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
