--- a/octopus/templates/base.html
+++ b/octopus/templates/base.html
@@ -92,7 +92,7 @@
               <a class="nav-link" href="{% url 'blog' %}">Blog</a>
             </li>
             <li class="nav-item active">
-              <a class="nav-link" href="{% url 'howto' %}">How to</a>
+              <a class="nav-link" href="{% url 'howto' %}">How</a>
             </li>
           </ul>
         </div>
